--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -7,6 +7,11 @@ version: 2.0.0
 environment:
   sdk: ^3.6.0
 
+dependency_overrides:
+  pointycastle:
+    git:
+      url: https://github.com/privacybydesign/pc-dart.git
+
 dependencies:
   archive: ^3.6.1
   collection: ^1.19.0
@@ -20,9 +25,11 @@ dependencies:
   logging: ^1.3.0
   meta: ^1.15.0
   tripledes_nullsafety: ^1.0.3
-  pointycastle: ^3.9.1
+  pointycastle:
+    git:
+      url: https://github.com/privacybydesign/pc-dart.git
   diffie_hellman: ^0.1.2
-  crypto_keys_plus: ^0.4.0 # till cypto_keys lib is not updated
+  # crypto_keys_plus: ^0.4.0 # till cypto_keys lib is not updated
 
 dev_dependencies:
   flutter:      # needed for flutter_nfc_kit
